rule item on the way

--- a/src/NonLocality/NonLocality.fsproj
+++ b/src/NonLocality/NonLocality.fsproj
@@ -80,6 +80,7 @@
     <Resource Include="SyncItem.xaml" />
     <Resource Include="SyncPointSettings.xaml" />
     <Compile Include="SyncPointSettings.fs" />
+    <Resource Include="RuleItem.xaml" />
     <Resource Include="ProfileWindow.xaml" />
     <Compile Include="ProfileWindow.fs" />
     <Compile Include="SyncWindow.fs" />
