--- a/src/NonLocality/NonLocality.fsproj
+++ b/src/NonLocality/NonLocality.fsproj
@@ -85,6 +85,7 @@
     <Compile Include="ProfileWindow.fs" />
     <Compile Include="SyncWindow.fs" />
     <Resource Include="Icons.xaml" />
+    <Resource Include="icon.ico" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
@@ -93,7 +94,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="UIAutomationTypes" />
   </ItemGroup>
   <ItemGroup>
